public/navbar.css
html {
    color: #333;
    font-size: 1em;
    line-height: 1.4;
    box-sizing: border-box;
}

body {
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: 'Oswald', sans-serif;
    background: #265A67;
    font-size: 18px;
}

.main-section {
    background: #F7F2E4;
    padding: 60px 40px;
}

#navbar {
    padding: 10px;
}

.container .jumbotron {
    background: #488187;
    background: linear-gradient(#488187, #68B0B4);
    background: -webkit-linear-gradient(#488187, #68B0B4);
    background: -o-linear-gradient(#488187, #68B0B4);
    background: -moz-linear-gradient(#488187, #68B0B4);
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -o-border-radius: 2px;
    margin-bottom: 0;
    padding-bottom: 0px;
}

.jumbotron h1 {
    font-size: 5em;
    text-transform: uppercase;
    color: #F4F4E5;
    letter-spacing: .05em;
    margin: -40px 0 0 -40px;
}

.jumbotron h2 {
    color: #E9BC61;
    font-size: 3em;
    text-transform: uppercase;
    letter-spacing: .05em;
    margin: 0 0 82px -40px;
}

.run-man {
    margin: 0;
}

.mountian {
    margin-left: -60px;
}

#navbar,
.navbar-header {
    background: #E7B35C;
    background: linear-gradient(#DEBB5D, #E7B35C);
    background: -webkit-linear-gradient(#DEBB5D, #E7B35C);
    background: -o-linear-gradient(#DEBB5D, #E7B35C);
    background: -moz-linear-gradient(#DEBB5D, #E7B35C);
    margin: 0;
}

.navbar-toggle {
    background: #407F80;
    border-radius: 18px;
}

.navbar-default .navbar-toggle:hover {
    background: #68B0B4;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #D7782D;
}

#navbar ul li a {
    font-size: 1.7em;
    text-transform: uppercase;
    color: #B79957;
    margin-right: 15px;
}

.navbar {
    border: none;
    margin-bottom: 35px;
}

ul li a {
    font-weight: 700;
    text-shadow: 1px 1px 2px rgba(38, 90, 103, 1);
}

.main article {
    float: right;
    width: 62%;
    background: #D8782D;
    background: linear-gradient(#D8782D, #CD762B);
    background: -webkit-linear-gradient(#D8782D, #CD762B);
    background: -o-linear-gradient(#D8782D, #CD762B);
    background: -moz-linear-gradient(#D8782D, #CD762B);
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -o-border-radius: 2px;
}

.main article header h1 {
    color: #EDE3B8;
    font-size: 2.5em;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.3em;
    padding: 0;
    margin-top: 0;
}

.main article p {
    padding: 30px 15px 0 15px;
}

.main aside {
    float: left;
    width: 35%;
    background: #EDE3B8;
    padding: 15px;
    border: 5px solid #D6762C;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -o-border-radius: 2px;
}

aside h2 {
    color: #A86421;
    font-size: 2.5em;
    font-family: 'Yellowtail', cursive;
    line-height: 1.3em;
    letter-spacing: .02em;
    font-weight: 500;
}

.footer {
    background: #E9BA68;
    margin: 10px 0 0 0;
}

.footer span {
    color: #488187;
    margin: 10px;
    float: right;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

// hover.css floating nav element
.hvr-float {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px transparent;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}

.hvr-float:hover,
.hvr-float:focus,
.hvr-float:active {
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
}

@media (min-width: 1200px) {
    .jumbotron h2 {
        margin: 0 0 55px 45%;
    }
}

@media (min-width: 990px) {
    .jumbotron h2 {
        margin: 0 0 54px -40px;
    }
}

@media (max-width: 990px) {
    .jumbotron h1 {
        font-size: 3.6em;
    }
    .jumbotron h2 {
        padding: 0;
    }
    .run-man {
        margin-left: -25px;
    }
    .mountian {
        margin-top: 28px;
    }
}

@media (max-width: 768px) {
    .jumbotron h1 {
        margin: -20px 0 0 0;
    }
    .jumbotron h2 {
        margin: 0;
    }
    .run-man {
        margin-left: -85px
    }
    .mountian {
        margin: 62px 0 0 -15px;
    }
    .hvr-float {
        display: inline-block;
        vertical-align: middle;
        -webkit-transform: perspective(1px) translateZ(0);
        transform: perspective(1px) translateZ(0);
        box-shadow: 0 0 1px transparent;
        -webkit-transition-duration: 0.3s;
        transition-duration: 0.3s;
        -webkit-transition-property: transform;
        transition-property: transform;
        -webkit-transition-timing-function: ease-out;
        transition-timing-function: ease-out;
    }
    .hvr-float:hover,
    .hvr-float:focus,
    .hvr-float:active {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

    .main aside {
        width: 100%;
        margin: 0 0 10px 0;
    }

    .main article {
        width: 100%;
        margin: 10px 0;
    }
}

@media (max-width: 637px) {
    .jumbotron h1 {
        margin: 0;
        font-size: 4.5em;
    }
    .jumbotron h2 {}
    .jumbotron img {
        // padding: 0 0 0 45px;
    }
    .run-img {
        display: none;
    }
}

